Corrected posts overflow.

--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -5,7 +5,7 @@
     margin: 0.5em auto;
     max-width: 40em;
     width: 50%;
-    height: 12em;
+    min-height: 12em;
     background-color: white;
 }
 
